xmonad/.xmonad/xmobarrc/bot.errors
Loaded package environment from /home/leniviy/.xmonad/.ghc.environment.x86_64-linux-8.6.5

bot.hs:1:1: error:
    Parse error: module header, import declaration
    or top-level declaration expected.
  |
1 | Config { font = "xft:tewi:style=Regular:pixelsize=11,Biwidth:pixelsize=12"
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
